actually no the first way was less bad

--- a/static/fencing-ref-practice.html
+++ b/static/fencing-ref-practice.html
@@ -84,7 +84,7 @@
                     } else {
                         // is remise by first fencer
                         row = -row
-                        sequence += ` no-${oppside(row)} remise-${side(row)}`
+                        sequence += ` remise-${side(row)}`
                     }
                 }
 
@@ -106,7 +106,7 @@
                     } else {
                         // is remise by first fencer
                         row = -row
-                        sequence += ` no-${oppside(row)} remise-${side(row)}`
+                        sequence += ` remise-${side(row)}`
                     }
                 }
             }
@@ -138,7 +138,7 @@
             } else {
                 // is remise by first fencer
                 row = -row
-                sequence += ` no-${oppside(row)} remise-${side(row)}`
+                sequence += ` remise-${side(row)}`
             }
         }
 
