--- a/static/random-raw-files/wtpidc.html
+++ b/static/random-raw-files/wtpidc.html
@@ -14,7 +14,7 @@ https://cdn.jsdelivr.net/npm/chart.js@4.3.0/dist/chart.umd.min.js
 <body>
     <h2><a href="https://rivques.dev/high-school-engineering/wireless-tuneable-pid-car/" target="_blank">Wireless Tuneable PID Car</a> client</h1>
     <h3>Note: Because this is an HTTPS connection, you will be unable to connect to the insecure websocket the car hosts by default. You'll need to either host this website
-        yourself insecurely or allow mixed content for this site (instructions <a href="https://www.damirscorner.com/blog/posts/20210528-AllowingInsecureWebsocketConnections.html" target="_blank">here</a>.)
+        yourself insecurely or allow mixed content for this site (instructions <a href="https://rivques.dev/high-school-engineering/wireless-tuneable-pid-car/#mixed-content?ref=docsdotdev" target="_blank">here</a>.)
     </h2>
     <form id="connect-form">
         <label>IP Address</label>
